cmd/config/cudn-density/ds.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: cudn-density
spec:
  selector:
    matchLabels:
      name: cudn-density
  template:
    metadata:
      labels:
        name: cudn-density
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/worker
                operator: Exists
              - key: node-role.kubernetes.io/infra
                operator: DoesNotExist
              - key: node-role.kubernetes.io/workload
                operator: DoesNotExist
      containers:
      - name: pause
        image: quay.io/cloud-bulldozer/curl:latest
        command: [sleep, inf]
        imagePullPolicy: IfNotPresent
